# glyphhound

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  VALIDATION.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
action/: README.md  action.yml
benchmark/: README.md  RELEASE.md
benchmark/payloads/: 01_plain_chain.jinja  02_attr_filter_concat.jinja  03_getattr_concat.jinja  04_concat_gated_loop.jinja  05_concat_gated_role.jinja  06_tilde_gated_if.jinja  10_benign_chat.jinja  11_benign_concat.jinja  12_benign_gated.jinja  20_format_split_gated.jinja  21_slice_concat_gated.jinja  22_join_split_gated.jinja  23_replace_placeholder_gated.jinja  MANIFEST.json
corpus/: PROVENANCE.json  README.md
corpus/templates/: 0xSero__DeepSeek-V4-Flash-162B-GGUF.jinja  BennyDaBall__Qwen3-4b-Z-Image-Engineer-V4.jinja  Chun121__Qwen3-4B-RPG-Roleplay-V2.jinja  DevQuasar__Qwen.Qwen3-VL-Embedding-2B-GGUF.jinja  JetBrains__Mellum2-12B-A2.5B-Thinking-GGUF-Q4_K_M.jinja  LocalAI-io__LocalAI-functioncall-qwen2.5-7b-v0.5-Q4_K_M-GGUF.jinja  MaziyarPanahi__Mistral-Nemo-Instruct-2407-GGUF.jinja  MaziyarPanahi__NVIDIA-Nemotron-Nano-12B-v2-GGUF.jinja  MaziyarPanahi__QwQ-32B-GGUF.jinja  MaziyarPanahi__Qwen3-Coder-Next-GGUF.jinja  MaziyarPanahi__Yi-1.5-6B-Chat-GGUF.jinja  MaziyarPanahi__Yi-Coder-1.5B-Chat-GGUF.jinja  MaziyarPanahi__mistral-small-3.1-24b-instruct-2503-hf-GGUF.jinja  OBLITERATUS__Qwen3.6-27B-OBLITERATED.jinja  QuantFactory__Qwen2.5-7B-Instruct-Uncensored-GGUF.jinja  Qwen__Qwen3-4B-GGUF.jinja  SakuraLLM__Sakura-GalTransl-7B-v3.7.jinja  TeichAI__Qwen3-14B-Claude-4.5-Opus-High-Reasoning-Distill-GGUF.jinja  TheDrummer__Cydonia-24B-v4.3-GGUF.jinja  TrevorJS__gemma-4-E2B-it-uncensored-GGUF.jinja  VLTX__VertaLily-1.2-1B-GGUF.jinja  VlSav__Vikhr-Nemo-12B-Instruct-R-21-09-24-Q8_0-GGUF.jinja  bartowski__Hermes-3-Llama-3.2-3B-GGUF.jinja  bartowski__PocketDoc_Dans-PersonalityEngine-V1.2.0-24b-GGUF.jinja  bartowski__cognitivecomputations_Dolphin-Mistral-24B-Venice-Edition-GGUF.jinja  darkc0de__XORTRON-NXTXPRT7-FAST.jinja  hugging-quants__Llama-3.2-1B-Instruct-Q8_0-GGUF.jinja  huihui-ai__Huihui-gpt-oss-20b-BF16-abliterated.jinja  lmg-anon__vntl-llama3-8b-v2-gguf.jinja  lmstudio-community__Hermes-4-70B-GGUF.jinja  lmstudio-community__LFM2.5-1.2B-Instruct-GGUF.jinja  lmstudio-community__Llama-3.2-1B-Instruct-GGUF.jinja  lmstudio-community__Meta-Llama-3.1-8B-Instruct-GGUF.jinja  lmstudio-community__Qwen3-14B-GGUF.jinja  lmstudio-community__Qwen3-Coder-30B-A3B-Instruct-GGUF.jinja  lmstudio-community__Qwen3-Coder-Next-GGUF.jinja  lmstudio-community__gpt-oss-20b-GGUF.jinja  microsoft__Phi-3-mini-4k-instruct-gguf.jinja  microsoft__bitnet-b1.58-2B-4T-gguf.jinja  microsoft__phi-4-gguf.jinja  (+19 more)
fixtures/benign/: PROVENANCE.json  README.md  bartowski__Qwen2.5-1.5B-Instruct-GGUF.jinja
fixtures/malicious/: attr_filter_pivot_marker.jinja  casefold_filter_marker.jinja  (+20 more)
scripts/: build_corpus.py  build_fp_corpus.py  prevalence_report.py  run_benchmark.py  scale_scan.py  score_yardstick.py  verify_phase0.py  verify_phase1.py  verify_phase10.py  verify_phase12.py  verify_phase13.py  verify_phase14.py  verify_phase15.py  verify_phase16.py  verify_phase18.py  verify_phase19.py  verify_phase2.py  verify_phase20.py  verify_phase3.py  verify_phase4.py  verify_phase5.py  verify_phase6.py  verify_phase7.py  verify_phase8.py  verify_phase9.py  verify_real_payloads.py  wider_fp_audit.py
study/: wider_fp_audit.json
tests/: synthetic.py  test_analyze.py  test_benchmark.py  test_catalog_phase12.py  test_cli_scan.py  test_const_propagation_phase13.py  test_corpus_fp.py  test_deobfuscate_phase10.py  test_deobfuscate_phase16.py  test_generation.py  test_gguf_acquire.py  test_hf_source.py  test_hf_source_phase17.py  test_ollama_acquire.py  test_parse.py  test_phase15.py  test_phase18.py  test_phase19.py  test_phase20.py  test_prevalence_report.py  test_report.py  test_sandbox.py  test_scale_scan.py  test_score_yardstick.py
(+34 files in other folders)
